@@ -5,6 +5,8 @@ EFA Version 3.0.0.4 Changes
 03/09/14
 Issue #63 Remove old kam.cf.backup from spamassasin directory
 
+Issue #18 Email signature sanitation (avoid duplicate signatures)
+
 ############################################################
 EFA Version 3.0.0.3 Changes
 ############################################################
